fixed swagger.json
